@@ -15,8 +15,9 @@ public class UsuarioPrincipal implements UserDetails{
     private String email;
     private String password;
     private Collection<?extends GrantedAuthority> authorities;
-    
-    //cons
+
+    public UsuarioPrincipal() {
+    }
 
     public UsuarioPrincipal(String nombre, String nombreUsuario, String email, String password, Collection<? extends GrantedAuthority> authorities) {
         this.nombre = nombre;
@@ -25,18 +26,18 @@ public class UsuarioPrincipal implements UserDetails{
         this.password = password;
         this.authorities = authorities;
     }
-    
+
     public static UsuarioPrincipal build(Usuario usuario){
-        List<GrantedAuthority> authorities = usuario.getRoles().stream()
-                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors
-                        .toList());
-        return new UsuarioPrincipal(usuario.getNombre(),
-                usuario.getNombreUsuario(), usuario.getEmail(), usuario.getPassword(), authorities);
+        List<GrantedAuthority> authorities = usuario.getRoles()
+                                                    .stream()
+                                                    .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name()))
+                                                    .collect(Collectors.toList());
+        return new UsuarioPrincipal(usuario.getNombre(),usuario.getNombreUsuario(),usuario.getEmail(),usuario.getPassword(),authorities);
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-       return authorities;
+        return authorities;
     }
 
     @Override
@@ -44,37 +45,36 @@ public class UsuarioPrincipal implements UserDetails{
         return password;
     }
 
-    public String getNombre() {
-    return nombreUsuario;
+    @Override
+    public String getUsername() {
+        return nombreUsuario;
     }
-        
+    
+    public String getNombre() {
+        return nombre;
+    }
+    
     public String getEmail() {
-    return email;
+        return email;
     }
 
     @Override
     public boolean isAccountNonExpired() {
-      return true;
+        return true;
     }
 
     @Override
     public boolean isAccountNonLocked() {
-       return true;
+        return true;
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-       return true;
+        return true;
     }
 
     @Override
     public boolean isEnabled() {
         return true;
     }
-
-    @Override
-    public String getUsername() {
-        throw new UnsupportedOperationException("Not supported yet."); // Generated from nbfs://nbhost/SystemFileSystem/Templates/Classes/Code/GeneratedMethodBody
-    }
-      
 }
